--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -103,7 +103,7 @@
         </ul>
     </main>
 
-    
+
     <footer class="the-end">
         <a href="./index.html" class="logo-footer"><span>Web</span><span>Studio</span></a>
         <address class="adress">
