--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     </header>
 
         <main>
-            <section class="section">
-                <h1 class="section-title">Ефективні рішення для вашого бізнесу</h1>
+            <section class="hero">
+                <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
                 <button type="button" class="button">Замовити послугу</button>
             </section>
 
@@ -63,7 +63,7 @@
             </section>
             
             <section>
-                <h2 class="subtitle">Чим ми займаємося</h2>
+                <h2 class="section-title">Чим ми займаємося</h2>
                 <ul>
                     <li><img src="./img/box1.jpg" alt="writing code" width="370" height="294"></li>
                     <li><img src="./img/box2.jpg" alt="program diagnostics" width="370" height="294"></li>
